fixed the alignment

--- a/css/style.css
+++ b/css/style.css
@@ -111,23 +111,6 @@ p {
   font-weight: bolder;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* topbar part */
 
 .topbar {
@@ -217,7 +200,7 @@ p {
   font-size: 14px;
   font-family: raleway;
 }
-.light-green{
+.light-green {
   background-color: var(--light-green);
 }
 
@@ -296,11 +279,9 @@ p {
 }
 
 /* offer part */
-.offer{
+.offer {
   padding: 20px 0 90px;
 }
-
-
 
 .card-2-content {
   border: 1px solid #333333;
@@ -316,8 +297,8 @@ p {
   font-weight: bold;
   margin-top: 12px;
 }
-.card-2-content a{
-   font-size: 14px;
+.card-2-content a {
+  font-size: 14px;
   font-family: raleway;
   font-weight: bold;
   color: black;
@@ -325,15 +306,14 @@ p {
 
 /* fruit & vegetable */
 
-.card-3{
+.card-3 {
   background-color: var(--green);
- 
 }
-.card-3 .img{
+.card-3 .img {
   /* padding: 10px; */
   height: 130px;
 }
-.card-3 figure{
+.card-3 figure {
   margin: 0 auto;
   width: 150px;
   /* height: 150px; */
@@ -355,34 +335,32 @@ p {
   font-weight: bold;
   margin-top: 12px;
 }
-.card-3-content a{
-   font-size: 14px;
+.card-3-content a {
+  font-size: 14px;
   font-family: raleway;
   font-weight: bold;
   color: black;
 }
 
-
-
 /* about-2 part*/
-.about-2{
+.about-2 {
   padding: 70px 0;
 }
-.about-2 p{
+.about-2 p {
   max-width: 535px;
   width: 100%;
   font-size: 14px;
   font-family: inter;
   font-weight: lighter;
-  letter-spacing: 0.60px;
+  letter-spacing: 0.6px;
 }
-.about-2 figure{
+.about-2 figure {
   width: 365px;
   margin-left: auto;
   position: relative;
 }
 .about-2 figure::after {
-  content: url('../img/about-2/2.png');
+  content: url("../img/about-2/2.png");
   display: block;
   width: 210px;
   position: absolute;
@@ -391,59 +369,56 @@ p {
 }
 
 /* review part */
-.review{
+.review {
   padding: 88px 0;
 }
-.card-4{
+.card-4 {
   position: relative;
   color: white;
 }
-.card-4-content{
+.card-4-content {
   background-color: var(--green);
   max-width: 425px;
   width: 100%;
   height: 388px;
   padding: 150px 22px 80px 22px;
 }
-.card-4 figure{
+.card-4 figure {
   width: 178px;
   position: absolute;
   top: -20%;
   left: 30%;
 
   z-index: 10;
-
 }
-.card-4-content  p{
+.card-4-content p {
   font-family: inter;
-  
 }
-
 
 /* mail part */
-.mail{
+.mail {
   background-color: var(--light-green);
 }
-.mail form{
+.mail form {
   position: relative;
 }
-input{
+input {
   display: block;
   padding: 10px;
   border: 1px solid gray;
   border-radius: 30px;
 }
-input[type="email"]{
+input[type="email"] {
   /* position: relative; */
   background-color: white;
   /* max-width: 758px ; */
-  width: 758px ;
+  width: 758px;
   /* width: 100%; */
   height: 68px;
   margin-left: 45px;
 }
 
-.email-btn{
+.email-btn {
   background-color: var(--green);
   padding: 13px;
   border-radius: 40px;
@@ -454,19 +429,19 @@ input[type="email"]{
 
 /* footer part */
 
-.footer{
+.footer {
   padding: 85px 0 175px;
   position: relative;
 }
-.footer .container{
+.footer .container {
   position: relative;
 }
 
-.footer a{
+.footer a {
   color: #333333;
   line-height: 2;
 }
-.footer p{
+.footer p {
   font-family: inter;
   font-weight: lighter;
   max-width: 350px;
@@ -474,7 +449,7 @@ input[type="email"]{
   margin-bottom: 45px;
 }
 
-.icon-bg{
+.icon-bg {
   background-color: var(--green);
   border-radius: 50%;
   width: 30px;
@@ -486,12 +461,12 @@ input[type="email"]{
   margin-right: 21px;
   transition: all 0.5s ease-in-out;
 }
-.icon-bg:hover{
+.icon-bg:hover {
   background-color: #7e9252;
   transform: scale(1.3);
 }
 
-.cradit-card{
+.cradit-card {
   gap: 5px;
   position: absolute;
   bottom: -150px;
